<resources>
    <string name="app_name">Shape Calculator App</string>
    <string name="select_your_shape">Select your Shape</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="parallelogram">Parallelogram</string>
    <string name="ellipse">Ellipse</string>
    <string name="square_length">Enter Length of side</string>
    <string name="circle_radius">Enter Radius</string>
    <string name="minor_axis">Enter length of Minor Axis</string>
    <string name="major_axis">Enter length of Major axis</string>
    <string name="parallelogram_height">Enter the Height</string>
    <string name="parallelogram_base">Enter the length of base</string>
    <string name="parallelogram_side">Enter the length of side</string>
    <string name="rectangle_length">Enter the length</string>
    <string name="rectangle_breadth">Enter the breadth</string>
    <string name="triangle_sideA">Enter the length of side A</string>
    <string name="triangle_sideB">Enter the length of side B</string>
    <string name="triangle_sideC">Enter the length of side C / Base</string>
    <string name="triangle_height">Enter the height</string>
</resources>