<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_your_shape"
                    android:textSize="30sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="484dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:columnCount="2"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/square"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10sp"
                app:cardCornerRadius="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"
                    android:text="@string/square"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/circle"
                android:layout_width="126dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10sp"
                app:cardCornerRadius="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"
                    android:text="@string/circle"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rectangle"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10sp"
                app:cardCornerRadius="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"
                    android:text="@string/rectangle"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/triangle"
                android:layout_width="127dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10sp"
                app:cardCornerRadius="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"
                    android:text="@string/triangle"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ellipse"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10sp"
                app:cardCornerRadius="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"
                    android:text="@string/ellipse"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/parallelogram"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10sp"
                app:cardCornerRadius="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="30sp"
                    android:paddingBottom="30sp"
                    android:text="@string/parallelogram"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>
</ScrollView>